# set-core

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  install.ps1  install.sh  pyproject.toml
.claude/: settings.json
benchmark/: README.md  collect-results.md  diagnostic-framework.md  init-baseline.sh  init-with-memory.sh  preflight.sh  run-guide.md  scoring-rubric.md  v3-results.md  v4-results.md  v5-results.md  v6-results.md
docs/: INDEX.md  account-manager.md  alpha-release.md  architecture.md  benchmark-craftbrew-run1.md  benchmark-minishop-run4.md  cli-reference.md  configuration.md  design-pipeline.md  developer-memory.md  discord-integration.md  getting-started.md  gui.md  kiro-comparison.md  mcp-server.md  memory-seeding-guide.md  openspec.md  orchestration.md  plan-checklist.md  planning-guide.md  plugins.md  project-knowledge.md  project-management.md  project-setup.md  readme-guide.md  research-ruflo-2026-03-10.md  roadmap.md  sentinel.md  team-sync.md  v5-orchestration-results.md  worktrees.md  wt-web.md
gui/: __init__.py  chat_crypto.py  constants.py  logging_setup.py  main.py  requirements.txt  usage_calculator.py
lib/: dashboard.py  editor.sh  frustration.py  metrics.py  notify-email.sh
mcp-server/: pyproject.toml  set_mcp_server.py  statusline.sh  wt_mcp_server.py
modules/: dev-guide.md
modules/example/: pyproject.toml
modules/example/set_project_example/: __init__.py  build.py  project_type.py
modules/example/set_project_example/templates/starter/: bestiary.yaml  manifest.yaml  project-knowledge.yaml
modules/example/set_project_example/templates/starter/dungeons/: castle.dungeon  cave.dungeon
modules/example/set_project_example/templates/starter/rules/: contribution-guide.md  dungeon-integrity.md
modules/example/tests/: conftest.py  test_build.py  test_integration.py  test_project_type.py
modules/mobile/: pyproject.toml
modules/mobile/set_project_mobile/: __init__.py  gates.py  planning_rules.txt  project_type.py
modules/mobile/set_project_mobile/templates/capacitor-nextjs/: capacitor.config.ts  manifest.yaml  project-knowledge.yaml
modules/mobile/set_project_mobile/templates/capacitor-nextjs/rules/: capacitor-conventions.md  native-bridge.md
modules/mobile/tests/: conftest.py  test_integration.py  test_project_type.py
modules/web/: pyproject.toml
modules/web/set_project_web/: base.py  cli.py  design_hygiene_cli.py  design_import_cli.py  gates.py  planning_rules.txt  post_merge.py  project_type.py  required_components_gate.py  review_baseline.md  v0_design_source.py  v0_fidelity_gate.py  v0_hygiene_scanner.py  v0_importer.py  v0_manifest.py  v0_renderer.py  v0_validator.py
modules/web/set_project_web/directives/: smoke-test.yaml
modules/web/set_project_web/templates/nextjs/: .env.example  .gitignore  manifest.yaml  next.config.js  package.json  playwright.config.ts  reflection.md  tsconfig.json  vitest.config.ts
modules/web/set_project_web/templates/nextjs/framework-rules/web/: auth-middleware.md  db-type-safety.md  security-patterns.md  transaction-patterns.md
modules/web/set_project_web/templates/nextjs/messages/: en.json  hu.json
modules/web/set_project_web/templates/nextjs/rules/: auth-conventions.md  data-model.md  design-integration.md  functional-conventions.md  i18n-conventions.md  nextjs-patterns.md  playwright-assertions.md  seed-conventions.md  testing-conventions.md  transaction-safety.md  ui-conventions.md  web-conventions.md  web-frontend.md
modules/web/set_project_web/templates/nextjs/scripts/: check-i18n-completeness.ts
modules/web/set_project_web/templates/nextjs/set/orchestration/: config.yaml
modules/web/set_project_web/templates/nextjs/src/lib/auth/: storage-state.ts
modules/web/set_project_web/templates/nextjs/tests/e2e/: global-setup.ts
modules/web/set_project_web/templates/nextjs/wt/orchestration/: config.yaml
modules/web/set_project_web/templates/spa/: manifest.yaml  playwright.config.ts  reflection.md
modules/web/set_project_web/templates/spa/rules/: components.md
modules/web/set_project_web/templates/spa/set/orchestration/: config.yaml
modules/web/set_project_web/verification-rules/: SCHEMA.md
modules/web/tests/: test_fidelity_classname_nonblocking.py  test_fidelity_inherited_routes.py  test_gates_dep_drift.py  test_i18n_check_gate.py  test_i18n_checker_scope.py  test_jsx_structural_parity.py  test_required_components_gate.py  test_rule_keyword_mapping_polysemous.py  test_scope_manifest_web.py  test_v0_design_source_provider.py  test_v0_fidelity_gate.py  test_v0_importer.py  test_v0_manifest.py  test_v0_renderer.py  test_v0_validator.py  test_web_categories.py
openspec/: project-brief.md.template  project.md
scripts/: audit-lineage-paths.sh  generate-icon.py  (+13 more)
(+3322 files in other folders)
