[project]
name = "set-core"
version = "0.3.0"
description = "SET (ShipExactlyThis) — Autonomous Multi-Agent Orchestration Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SET contributors"}
]
requires-python = ">=3.10"
keywords = ["git", "worktree", "ai", "development", "claude", "orchestration", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "PySide6>=6.5.0",
    "cloudscraper>=1.2.0",
    "psutil>=5.9.0",
    "pyobjc-framework-Cocoa>=9.0; sys_platform == 'darwin'",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "watchfiles>=0.20.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
memory = [
    "shodh-memory>=0.1.81",
]
discord = [
    "discord.py>=2.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/tatargabor/set-core"
Documentation = "https://github.com/tatargabor/set-core#readme"
Repository = "https://github.com/tatargabor/set-core"
Issues = "https://github.com/tatargabor/set-core/issues"

[project.scripts]
set-control = "gui.main:main"
set-orch-core = "set_orch.cli:main"
set-manager = "set_orch.manager.cli:main"

[project.entry-points."set_tools.plugins"]
# Plugins register themselves here
# Example:

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
set_orch = "lib/set_orch"

[tool.setuptools.packages.find]
include = ["set_tools*", "set_orch*", "gui*"]
where = [".", "lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
qt_api = "pyside6"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)
