[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "set-project-mobile"
version = "0.1.0"
description = "Mobile (Capacitor) project type plugin for SET"
requires-python = ">=3.10"
dependencies = ["pyyaml>=5.0", "set-project-web"]

[project.entry-points."set_tools.project_types"]
mobile = "set_project_mobile:MobileProjectType"

[tool.hatch.build.targets.wheel]
packages = ["set_project_mobile"]

[tool.hatch.build.targets.wheel.force-include]
"set_project_mobile/templates" = "set_project_mobile/templates"
